--- a/CS316/ben-richey.html
+++ b/CS316/ben-richey.html
@@ -247,6 +247,172 @@
                     </figure>
                 </section>
             </details>
+            <details>
+                <summary><strong>Restuarant Reviews</strong></summary>
+                <section class="page">
+                    <h2 class="pageHeader">Restaurant Reviews</h2>
+                    <table>
+                        <caption id="tableCaption">Some of my favorite places to go eat, in no
+                            particular order. Each restaurant gets a rating out of 5: 0 being the
+                            worst and 5 being the best. If you click on the image of the restuarant,
+                            it will take you to their website.</caption>
+                        <thead>
+                            <tr>
+                                <th>Restaurant</th>
+                                <th>Best Dish</th>
+                                <th>Overall Rating(Out of 5)</th>
+                                <th>Cost</th>
+                                <th>Review</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a href="https://joebolognas.com/">
+                                    <img class="restuarantLogo" src="./images/JoeBsLogo.png" alt="Joe Balogna's Logo"
+                                         title="Joe Balogna's Logo"></a>
+                                </td>
+                                <td>Sicilian Pan Pizza</td>
+                                <td>4.5/5</td>
+                                <td>$10-$20 per person</td>
+                                <td>Joe B's is a great italian restaurant in downtown Lexington, KY.
+                                It features a tremendous variety of italian classics such as pizza,
+                                lasagna, cannelloni, fettuccine, manicotti, and a great deal more.
+                                The most notable item on the menu is the classic Joe B's breadstick.
+                                This breadstick is a staple of the restaurant, served with a
+                                delicious garlic butter. Joe B's is a wonderful spot to take friends
+                                and family for lunch or dinner.</td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://localtacolex.com/">
+                                        <img class="restuarantLogo"
+                                             src="./images/LocalTaco.png" alt="Local Taco Logo"
+                                             title="Local Taco Logo"/></a>
+                                </td>
+                                <td>Buffalo Chicken Taco</td>
+                                <td>4/5</td>
+                                <td>$10-$20 per person</td>
+                                <td>The Local Taco is fun restaurant in downtown Lexington, KY that
+                                    features a wide array of tasty street tacos at a reasonable
+                                    price. My go-to meal is a 4 taco basket with 2 steak tacos and 2
+                                    buffalo chicken tacos. The steak tacos have a tangy flavor
+                                    coming from horse radish mixed underneath steak cooked with a
+                                    chili spice rub. The buffalo chicken tacos come with a bit of a
+                                    kick and a surprisingly satisfying mix of blue cheese sprinkled
+                                    on top. This restaurant is a perfect spot for a date or a night
+                                    out with friends as they also feature a full bar.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><a href="http://www.ilovecajun.com/">
+                                       <img class="restuarantLogo" id="bourbonNToulouse"
+                                            src="./images/BourbonNToulouse.jpg"
+                                            alt="Bourbon n Toulouse Logo"
+                                            title="Bourbon n Toulouse Logo"/></a>
+                                </td>
+                                <td>Red Beans and Rice</td>
+                                <td>4.8/5</td>
+                                <td>$8-$12 per person</td>
+                                <td>Bourbon 'n Toulouse is a quaint dive located near the University
+                                    of Kentucky campus serving hot cajun food daily. Appearances can
+                                    be deceiving and this restaurant is a prime example. It may not
+                                    look like much from the outside, but when you step in and try
+                                    their food, all preconceived notions will fade as their
+                                    delicious cajin mixins' melt across your mouth. My personal
+                                    favorite is the red beans and rice dish: a plate of red beans
+                                    and savory sausage held together by a red sauce served on a
+                                    plate of rice. The meal is further complemented with a couple of
+                                    pieces of bread with a garlic sauce drizzled on top. I highly
+                                    recommend this place for quick, delicious, and cheap comfort
+                                    food.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+            </details>
+            <details>
+                <summary><strong>Report Bugs or Feature Requests</strong></summary>
+                <section class="page">
+                    <h2 class="pageHeader">Report Bugs or Feature Requests</h2>
+                    <form method="post" action="http://examples.funwebdev.com/process.php">
+                        <fieldset>
+                        <p>You may provide your contact information if you wish to be contacted back
+                           about this bug/feature's status</p>
+                        <legend>Your Contact Info</legend>
+                        <br>
+                        <label>Name</label>
+                        <input type="text" name="name" placeholder="John Doe"/><br>
+                        <label>Phone Number</label>
+                        <input type="tel" name="phoneNumber" placeholder="###-###-####"
+                               pattern="[0-9][0-9][0-9]-[0-9][0-9][0-9]-[0-9][0-9][0-9][0-9]"/><br>
+                        <label>Email</label>
+                        <input type="email" name="email" placeholder="john.doe@gmail.com"/><br>
+                        <input type="submit"/>
+                        <input type="reset"/>
+                        </fieldset>
+                        <hr>
+                    </form>
+                    <form method="post" action="http://examples.funwebdev.com/process.php">
+                        <fieldset>
+                        <legend>Bug Report or Feature Request?</legend>
+                        <p>
+                        <input id="requestType1" type="radio" name="requestType" value="bug"
+                               required>Bug Report
+                        <input id="requestType2" type="radio" name="requestType" value="feature"
+                               required>Feature Request
+                        </p>
+                        <label for="report">Enter Report/Request Here</label><br>
+                        <textarea id="report" name="request" rows="8" cols="100"
+                                  required></textarea><br>
+                        <input type="submit"/>
+                        <input type="reset"/>
+                        </fieldset>
+                        <hr>
+                    </form>
+                    <form method="post" action="http://examples.funwebdev.com/process.php">
+                        <fieldset>
+                        <legend>Please Take a Moment to Rate this Website</legend>
+                        <br>
+                        <label for="aesetheticAppeal">Please rate this website for aesthetic appeal
+                        </label>
+                        <select id="aesetheticAppeal" name="aestheticAppeal">
+                            <optgroup label="Terrible">
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                            </optgroup>
+                            <optgroup label="Mediocre">
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </optgroup>
+                            <optgroup label="Great!">
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </optgroup>
+                        </select>
+                        <br>
+                        <label for="logic">Is this website easy to use?</label>
+                        <select id="logic" name="logic">
+                            <optgroup label="Not at all">
+                                <option value="0">0</option>
+                                <option value="1">1</option>
+                            </optgroup>
+                            <optgroup label="Somewhat">
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </optgroup>
+                            <optgroup label="Super Easy!">
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </optgroup>
+                        </select>
+                        <br>
+                        <br>
+                        <input type="submit"/>
+                        <input type="reset"/>
+                        </fieldset>
+                        <hr>
+                    </form>
+                </section>
+            </details>
         </main>
     </body>
 </html>
