--- a/CS316/project4/pages/report.html
+++ b/CS316/project4/pages/report.html
@@ -3,8 +3,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width"/>
         <title>Ben Richey</title>
-        <!-- <link rel="stylesheet" href="../styles/stylesheet.css"/> -->
+        <link rel="stylesheet" href="../styles/constants.css"/>
     </head>
     <body>
         <header>
@@ -26,7 +27,6 @@
                 <a href="./resume.html"><strong>My Resume</strong></a>
                 <a href="./myWork.html"><strong>My Work</strong></a>
                 <a href="./myInterests.html"><strong>My Interests</strong></a>
-                <a href="./contact.html"><strong>Contact Me!</strong></a>
                 <a href="./theOfficeQuote.html"><strong>The Office Quote of the Day</strong></a>
                 <a href="./restaurantReviews.html"><strong>Restuarant Reviews</strong></a>
                 <a href="./report.html"><strong>Report Bugs or Feature Requests</strong></a>
@@ -61,8 +61,7 @@
                            required>Feature Request
                     </p>
                     <label for="report">Enter Report/Request Here</label><br>
-                    <textarea id="report" name="request" rows="8" cols="100"
-                              required></textarea><br>
+                    <textarea id="report" name="request" rows="8" required></textarea><br>
                     <input type="submit"/>
                     <input type="reset"/>
                     </fieldset>
@@ -109,8 +108,21 @@
                     <input type="submit"/>
                     <input type="reset"/>
                     </fieldset>
-                    <hr>
                 </form>
+            </section>
+            <section class="contact">
+                <h2 class="contentHeader">Contact</h2>
+                <ul>
+                    <li><p>
+                        Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a>
+                        </p>
+                    </li>
+                    <li><p>
+                            <a href="https://www.linkedin.com/in/ben-richey-0b967a18a">LinkedIn
+                            </a>
+                        </p>
+                    </li>
+                </ul>
             </section>
         </main>
     </body>
