--- a/CS316/project4/pages/restaurantReviews.html
+++ b/CS316/project4/pages/restaurantReviews.html
@@ -3,8 +3,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width"/>
         <title>Ben Richey</title>
-        <!-- <link rel="stylesheet" href="../styles/stylesheet.css"/> -->
+        <link rel="stylesheet" href="../styles/constants.css"/>
     </head>
     <body>
         <header>
@@ -26,54 +27,25 @@
                 <a href="./resume.html"><strong>My Resume</strong></a>
                 <a href="./myWork.html"><strong>My Work</strong></a>
                 <a href="./myInterests.html"><strong>My Interests</strong></a>
-                <a href="./contact.html"><strong>Contact Me!</strong></a>
                 <a href="./theOfficeQuote.html"><strong>The Office Quote of the Day</strong></a>
                 <a href="./restaurantReviews.html"><strong>Restuarant Reviews</strong></a>
                 <a href="./report.html"><strong>Report Bugs or Feature Requests</strong></a>
             </nav>
             <section class="content">
                 <h2 class="contentHeader">Restaurant Reviews</h2>
-                <table>
-                    <caption id="tableCaption">Some of my favorite places to go eat, in no
-                        particular order. Each restaurant gets a rating out of 5: 0 being the
-                        worst and 5 being the best. If you click on the image of the restuarant,
-                        it will take you to their website.</caption>
-                    <thead>
-                        <tr>
-                            <th>Restaurant</th>
-                            <th>Best Dish</th>
-                            <th>Overall Rating(Out of 5)</th>
-                            <th>Cost</th>
-                            <th>Review</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><a href="https://joebolognas.com/">
-                                <img class="restuarantLogo" src="../images/JoeBsLogo.png" alt="Joe Balogna's Logo"
-                                     title="Joe Balogna's Logo"></a>
-                            </td>
-                            <td>Sicilian Pan Pizza</td>
-                            <td>4.5/5</td>
-                            <td>$10-$20 per person</td>
-                            <td>Joe B's is a great italian restaurant in downtown Lexington, KY.
-                            It features a tremendous variety of italian classics such as pizza,
-                            lasagna, cannelloni, fettuccine, manicotti, and a great deal more.
-                            The most notable item on the menu is the classic Joe B's breadstick.
-                            This breadstick is a staple of the restaurant, served with a
-                            delicious garlic butter. Joe B's is a wonderful spot to take friends
-                            and family for lunch or dinner.</td>
-                        </tr>
-                        <tr>
-                            <td><a href="https://localtacolex.com/">
-                                    <img class="restuarantLogo"
-                                         src="../images/LocalTaco.png" alt="Local Taco Logo"
-                                         title="Local Taco Logo"/></a>
-                            </td>
-                            <td>Buffalo Chicken Taco</td>
-                            <td>4/5</td>
-                            <td>$10-$20 per person</td>
-                            <td>The Local Taco is fun restaurant in downtown Lexington, KY that
+                <p id="tableCaption">Some of my favorite places to go eat, in no
+                    particular order. Each restaurant gets a rating out of 5: 0 being the
+                    worst and 5 being the best. If you click on the image of the restuarant,
+                    it will take you to their website.</p>
+                <p><strong>Restaurant | Best Dish | Rating | Price | Review</strong></p>
+                <div class="row">
+                    <a class="column" href="https://localtacolex.com/"><img class="restuarantLogo"
+                                src="../images/LocalTaco.png" alt="Local Taco Logo"
+                                title="Local Taco Logo"/></a>
+                    <p class="column">Buffalo Chicken Taco</p>
+                    <p class="column">4/5</p>
+                    <p class="column">$10-$20 per person</p>
+                    <p class="review">The Local Taco is fun restaurant in downtown Lexington, KY that
                                 features a wide array of tasty street tacos at a reasonable
                                 price. My go-to meal is a 4 taco basket with 2 steak tacos and 2
                                 buffalo chicken tacos. The steak tacos have a tangy flavor
@@ -81,20 +53,33 @@
                                 chili spice rub. The buffalo chicken tacos come with a bit of a
                                 kick and a surprisingly satisfying mix of blue cheese sprinkled
                                 on top. This restaurant is a perfect spot for a date or a night
-                                out with friends as they also feature a full bar.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="http://www.ilovecajun.com/">
-                                   <img class="restuarantLogo" id="bourbonNToulouse"
+                                out with friends as they also feature a full bar.</p>
+                </div>
+                <div class="row">
+                    <a class="column" href="https://joebolognas.com/">
+                                <img class="restuarantLogo" src="../images/JoeBsLogo.png" alt="Joe Balogna's Logo"
+                                     title="Joe Balogna's Logo"></a>
+                    <p class="column">Sicilian Pan Pizza</p>
+                    <p class="column">4.5/5</p>
+                    <p class="column">$10-$20 per person</p>
+                    <p class="review">Joe B's is a great italian restaurant in downtown Lexington, KY.
+                            It features a tremendous variety of italian classics such as pizza,
+                            lasagna, cannelloni, fettuccine, manicotti, and a great deal more.
+                            The most notable item on the menu is the classic Joe B's breadstick.
+                            This breadstick is a staple of the restaurant, served with a
+                            delicious garlic butter. Joe B's is a wonderful spot to take friends
+                            and family for lunch or dinner.</p>
+                </div>
+                <div class="row">
+                    <a class="column" href="http://www.ilovecajun.com/"><img class="restuarantLogo"
+                                        id="bourbonNToulouse"
                                         src="../images/BourbonNToulouse.jpg"
                                         alt="Bourbon n Toulouse Logo"
                                         title="Bourbon n Toulouse Logo"/></a>
-                            </td>
-                            <td>Red Beans and Rice</td>
-                            <td>4.8/5</td>
-                            <td>$8-$12 per person</td>
-                            <td>Bourbon 'n Toulouse is a quaint dive located near the University
+                    <p class="column">Red Beans and Rice</p>
+                    <p class="column">4.8/5</p>
+                    <p class="column">$8-$12 per person</p>
+                    <p class="review">Bourbon 'n Toulouse is a quaint dive located near the University
                                 of Kentucky campus serving hot cajun food daily. Appearances can
                                 be deceiving and this restaurant is a prime example. It may not
                                 look like much from the outside, but when you step in and try
@@ -105,10 +90,22 @@
                                 plate of rice. The meal is further complemented with a couple of
                                 pieces of bread with a garlic sauce drizzled on top. I highly
                                 recommend this place for quick, delicious, and cheap comfort
-                                food.</td>
-                        </tr>
-                    </tbody>
-                </table>
+                                food.</p>
+                </div>
+            </section>
+            <section class="contact">
+                <h2 class="contentHeader">Contact</h2>
+                <ul>
+                    <li><p>
+                        Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a>
+                        </p>
+                    </li>
+                    <li><p>
+                            <a href="https://www.linkedin.com/in/ben-richey-0b967a18a">LinkedIn
+                            </a>
+                        </p>
+                    </li>
+                </ul>
             </section>
         </main>
     </body>
