--- a/CS316/project4/pages/resume.html
+++ b/CS316/project4/pages/resume.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width"/>
         <title>Ben Richey</title>
         <link rel="stylesheet" href="../styles/constants.css"/>
     </head>
@@ -26,7 +27,6 @@
                 <a href="./resume.html"><strong>My Resume</strong></a>
                 <a href="./myWork.html"><strong>My Work</strong></a>
                 <a href="./myInterests.html"><strong>My Interests</strong></a>
-                <a href="./contact.html"><strong>Contact Me!</strong></a>
                 <a href="./theOfficeQuote.html"><strong>The Office Quote of the Day</strong></a>
                 <a href="./restaurantReviews.html"><strong>Restuarant Reviews</strong></a>
                 <a href="./report.html"><strong>Report Bugs or Feature Requests</strong></a>
@@ -140,6 +140,20 @@
                         <li>Proficient w/ ROS Middleware Framework</li>
                     </ul>
                 </section>
+            </section>
+            <section class="contact">
+                <h2 class="contentHeader">Contact</h2>
+                <ul>
+                    <li><p>
+                        Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a>
+                        </p>
+                    </li>
+                    <li><p>
+                            <a href="https://www.linkedin.com/in/ben-richey-0b967a18a">LinkedIn
+                            </a>
+                        </p>
+                    </li>
+                </ul>
             </section>
         </main>
     </body>
